# pokemendel_core

./: .gitignore  README.md  pyproject.toml  requirements.txt
pokemendel_core/: __init__.py
pokemendel_core/data/: __init__.py  gen1.py  gen2.py  gen3.py
pokemendel_core/data/utils/: names.py
pokemendel_core/models/: pokemon.py
pokemendel_core/models/evolution/: __init__.py  items.py
pokemendel_core/utils/: __init__.py
pokemendel_core/utils/definitions/: __init__.py  abilities.py  regions.py  types.py
test_install/: test_import.py
tests/: __init__.py
tests/data/: __init__.py  test_gen1.py  test_gen2.py
tests/models/: __init__.py  test_pokemon.py
tests/models/evolution/: __init__.py  test_evolution.py  test_evolution_type.py  test_items.py
tests/utils/: __init__.py  test_categories.py  test_colors.py  test_enum_list.py  test_evolutions.py  test_genders.py  test_regions.py  test_types.py
tests/utils/definitions/: __init__.py  test_stats.py
