[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pokemendel_core"
version = "0.4.3"
description = "A Python package providing comprehensive data structures and utilities for working with Pokémon from Generations 1 and 2"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nir Mendel"},
]
keywords = ["pokemon", "game", "data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dataclasses>=0.6; python_version < '3.7'",
    "typing-extensions>=4.0.0; python_version < '3.8'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.0.290",
]

[project.urls]
Documentation = "https://github.com/yourusername/pokemendel_core#readme"
Source = "https://github.com/yourusername/pokemendel_core"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
line-length = 88
target-version = "py38" 
